# logisticpca

./: CMakeLists.txt  README.md  run_all.sh
include/: logisticpca.h
src/: logisticpca.cpp  main.cpp
